# finrag

./: .env.example  .gitignore  BUILD_STATE.md  CLAUDE.md  CLAUDE_CHANGES.md  plan.md  pyproject.toml  readme.md
.github/workflows/: ci.yml
api/: __init__.py  app.py  identity.py  security.py  test_app.py  test_identity.py  test_security.py  users.py
config/: __init__.py  settings.py  system_config.py  test_system_config.py
deploy/: PHASE5-RUNBOOK.md
deploy/app/: Dockerfile.chain-server  chain-server-deployment.yaml  ingress.yaml  milvus-values.yaml  service.yaml
deploy/autoscaling/: hpa-embed.yaml  hpa-llm.yaml
deploy/eks/: README.md  cluster.yaml
deploy/gpu-operator/: install.md
deploy/loadtest/: locustfile.py  run.md
deploy/nim-operator/: install.md  nimcache.yaml  nimservice-embed.yaml  nimservice-llm.yaml  nimservice-rerank.yaml
deploy/observability/: dcgm-exporter.md  grafana-notes.md  prometheus-adapter-values.yaml  prometheus-values.yaml  servicemonitor-nim.yaml
deploy/storage/: pvc.yaml
docs/adr/: ADR-001-stack-and-architecture.md  ADR-002-chunking-strategy.md  ADR-003-embedding-nim-and-rate-limiting.md  ADR-004-milvus-schema-and-index.md  ADR-005-hybrid-retrieval-and-reranking.md  ADR-006-generation-and-citation-enforcement.md  ADR-007-rbac-retrieval-time-enforcement.md  ADR-008-auth-and-tenant-isolation.md  ADR-009-eval-leak-suite-and-golden-dataset.md  ADR-010-ragas-eval-harness.md  ADR-011-web-ui-and-api-client-wiring.md  ADR-012-lifespan-state-corpus-scan.md
eval/: __init__.py  errors.py  loader.py  models.py
eval/golden/: __init__.py  golden_qa.jsonl  test_dataset.py
eval/leak_suite/: __init__.py  conftest.py  seeder.py  test_rbac_leaks.py
eval/ragas/: __init__.py  __main__.py  models.py  nim_judge.py  reporter.py  runner.py  test_harness.py
generation/: __init__.py  answer.py  citations.py  conftest.py  errors.py  llm_client.py  prompt.py  test_answer.py  test_citations.py  test_prompt.py
ingest/: __init__.py  chunker.py  conftest.py  embedder.py  errors.py  models.py  nim_client.py  parser.py  pipeline.py  test_chunker.py  test_embedder.py  test_models.py  test_nim_client.py  test_parser.py
rbac/: __init__.py  classifier.py  conftest.py  filter.py  roles.py  test_adversarial_leaks.py  test_filter.py  test_roles.py
retrieval/: __init__.py  bm25.py  conftest.py  errors.py  fusion.py  reranker.py  search.py  test_bm25.py  test_fusion.py  test_reranker.py  test_search.py  test_vector_store.py  vector_store.py
scripts/: __init__.py  seed_demo.py
web/: INTEGRATION.md  _ds_bundle.js  _ds_manifest.json  readme.md  styles.css
web/components/_css/: citation.css  core.css  data.css  feedback.css  forms.css
web/components/citation/: AccessBadge.d.ts  AccessBadge.jsx  Citation.d.ts  Citation.jsx  ConfidenceMeter.d.ts  ConfidenceMeter.jsx  SourceCard.d.ts  SourceCard.jsx  citation.card.html  citation.prompt.md
web/components/core/: Avatar.d.ts  Avatar.jsx  Badge.d.ts  Badge.jsx  Button.d.ts  Button.jsx  Button.prompt.md  IconButton.d.ts  IconButton.jsx  Spinner.d.ts  Spinner.jsx  core.card.html
web/components/feedback/: Banner.d.ts  Banner.jsx  EmptyState.d.ts  EmptyState.jsx  Toast.d.ts  Toast.jsx  Tooltip.d.ts  Tooltip.jsx  feedback.card.html
web/components/forms/: Checkbox.d.ts  Checkbox.jsx  Field.d.ts  Field.jsx  Input.d.ts  Input.jsx  Select.d.ts  Select.jsx  Switch.d.ts  Switch.jsx  Textarea.d.ts  Textarea.jsx  forms.card.html  forms.prompt.md
web/tokens/: base.css  colors.css  elevation.css  fonts.css  spacing.css  typography.css
web/ui_kits/finrag-app/: AdminScreen.jsx  AppHeader.jsx  DocumentsScreen.jsx  Icons.jsx  LoginScreen.jsx  NavSidebar.jsx  QueryScreen.jsx  api.js  config.js  index.html  mockData.js
