[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finrag"
version = "0.1.0"
description = "Production-grade multi-tenant financial RAG with chunk-level RBAC on NVIDIA NIM"
readme = "readme.md"
requires-python = ">=3.11"
dependencies = [
    # PDF parsing
    "docling>=2.0.0",
    # Vector store (Milvus Lite bundled inside pymilvus extras)
    "pymilvus[milvus_lite]>=2.4.0",
    # Lexical retrieval
    "rank-bm25>=0.2.2",
    # API + validation
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.3.0",
    # Observability
    "structlog>=24.2.0",
    # HTTP client (NIM health checks)
    "httpx>=0.27.0",
    # Auth — password hashing (slow argon2/bcrypt) + JWT
    "passlib[argon2]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "pytest-cov==7.1.0",
    "mypy==2.1.0",
    "ruff==0.15.17",
    # PDF fixture generation for ingest tests
    "fpdf2>=2.7.0",
    # httpx mocking for NIM client tests
    "respx==0.23.1",
    # stubs
    "types-requests>=2.32.0",
    "types-passlib>=1.7.0",
    # FastAPI TestClient
    "httpx>=0.27.0",
]
# eval-live: heavy RAGAS stack for live evaluation runs.
# NOT included in [dev] — CI never installs these.
# Install with: pip install 'finrag[eval-live]'
# All ragas imports in eval/ragas/ are lazy so [dev]-only CI stays clean.
eval-live = [
    "ragas==0.4.3",
    "langchain==0.3.30",
    "langchain-community==0.3.31",
    "langchain-core==0.3.86",
    "langchain-openai==0.3.32",
    "datasets==5.0.0",
    "instructor==1.11.3",
    "openai==1.109.1",
    "tiktoken==0.13.0",
    "nest-asyncio==1.6.0",
    "diskcache==5.6.3",
    "networkx==3.6.1",
    "scikit-network==0.33.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["config*", "ingest*", "retrieval*", "rbac*", "generation*", "eval*", "api*"]

# ── Ruff ────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "ANN", # flake8-annotations
    "RUF", # ruff-specific
]
ignore = [
    "ANN204", # missing return type for __init__ / __new__ / __post_init__
]

[tool.ruff.lint.per-file-ignores]
"**/test_*.py" = ["ANN", "S"]
"**/conftest.py" = ["ANN"]

# ── Mypy ────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "docling.*",
    "pymilvus.*",
    "structlog.*",
    "rank_bm25.*",
    "httpx.*",
    "respx.*",
    "passlib.*",
    "jose.*",
]
ignore_missing_imports = true

# ragas and its transitive deps are optional (eval-live extra).
# They are not installed in CI — ignore missing stubs and imports.
[[tool.mypy.overrides]]
module = [
    "ragas.*",
    "langchain.*",
    "langchain_openai.*",
    "langchain_core.*",
    "langchain_community.*",
    "datasets.*",
    "instructor.*",
    # pandas is a ragas transitive dep; stubs ship separately as pandas-stubs
    "pandas.*",
]
ignore_missing_imports = true

# eval.ragas.* files interact with ragas/langchain/NIM types that vary between
# optional-extra present vs absent.  Suppress type errors in these files so CI
# (without ragas) and local (with ragas) both pass mypy without conflicting
# ignore comments.
[[tool.mypy.overrides]]
module = [
    "eval.ragas.runner",
    "eval.ragas.nim_judge",
]
ignore_errors = true

# ── Pytest ──────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["config", "ingest", "retrieval", "rbac", "generation", "eval", "api"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--tb=short -q -m 'not slow'"
asyncio_mode = "auto"
markers = [
    "slow: requires external resources (Docling ML model or NIM_API_KEY + network). Excluded from default CI run.",
]
